See the end for copying conditions.

Please send GNU C library bug reports via <https://sourceware.org/bugzilla/>
using `glibc' in the "product" field.

Version 2.33.1

Major new features:

* The dynamic linker implements the --list-diagnostics option, printing
  a dump of information related to IFUNC resolver operation and
  glibc-hwcaps subdirectory selection.

The following bugs are resolved with this release:

  [15271] dlfcn function failure after dlmopen terminates process
  [18435] pthread_once hangs when init routine throws an exception
  [23462] Static binary with dynamic string tokens ($LIB, $PLATFORM, $ORIGIN)
    crashes
  [27304] pthread_cond_destroy does not pass private flag to futex system calls
  [27537] test-container: Always copy test-specific support files
  [27577] elf/ld.so --help doesn't work
  [27648] FAIL: misc/tst-select
  [27651] Performance regression after updating to 2.33
  [27706] select fails to update timeout on error
  [27744] Support different libpthread/ld.so load orders for gdb -p
  [27892] powerpc: scv ABI error handling fails to check IS_ERR_VALUE

Version 2.33

Major new features:

* The dynamic linker accepts the --list-tunables argument which prints
  all the supported tunables.  This option is disable if glibc is
  configured with tunables disabled (--enable-tunables=no).

* The dynamic linker accepts the --argv0 argument and provides opportunity
  to change argv[0] string.

* The dynamic linker loads optimized implementations of shared objects
  from subdirectories under the glibc-hwcaps directory on the library
  search path if the system's capabilities meet the requirements for
  that subdirectory.  Initially supported subdirectories include
  "power9" and "power10" for the powerpc64le-linux-gnu architecture,
  "z13", "z14", "z15" for s390x-linux-gnu, and "x86-64-v2", "x86-64-v3",
  "x86-64-v4" for x86_64-linux-gnu.  In the x86_64-linux-gnu case, the
  subdirectory names correspond to the vendor-independent x86-64